--- a/src/components/organisms/facts/facts-container/factsContainer.css
+++ b/src/components/organisms/facts/facts-container/factsContainer.css
@@ -55,9 +55,10 @@
 @media screen and (max-width: 767px) {
 .facts_title_card {
   width: 100%;
+  min-height: auto;
 }
 .facts_img_card {
-  width: 90%;
+  width: 100%;
 }
 .facts_title_card h2 {
   font-size: 32px;
