--- a/src/components/organisms/footer/footer.module.css
+++ b/src/components/organisms/footer/footer.module.css
@@ -30,7 +30,8 @@
 }
 
 .footerLogo img {
-  margin: 0 0 78px;
+  margin: 0 0 0px;
+  width: 70%;
 }
 
 .footerBrandLogo {
