--- a/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
+++ b/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
@@ -66,6 +66,7 @@ img.left-card-img {
 }
 .sp_card_left {
   width: 100%;
+  padding: 20px;
 }
 .left-card-img{
   width: 100%;
